@@ -1,3 +1,7 @@
+17 October 2012: Wouter
+	- Fix alignment problem in zone transfer pipeline code.
+	- Fix random generator generating negative.
+
 15 October 2012: Wouter
 	- Fix activated zone does not interrupt transfer.
 	- Log of connection failure for zone transfer is neater.
